--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -1,5 +1,5 @@
 .footer-outer-container {
-  background-color: variables.$blue;
+  background-color: variables.$bg-blue;
   .footer-inner-container {
     color: white;
     padding-top: 40px;
