--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,4 +15,4 @@ $theme-colors: (
 
 @import "partials/homepage", "partials/navbar", "partials/layout",
   "partials/getStartedButton", "partials/footer", "partials/about-page",
-  "partials/carousel-slide";
+  "partials/carousel-slide", "partials/faq-page";
