--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -49,29 +49,30 @@
       text-decoration: None;
     }
   }
-  .navbar-item {
-    padding: 10px 0;
-    a {
-      text-decoration: None;
-    }
-    .nav-link {
-      color: black;
-    }
 
-    .nav-link:hover {
-      color: black;
-      text-decoration: underline;
-      text-decoration-color: variables.$red;
-    }
-
-    @include variables.xl {
-      padding: 0 20px;
-    }
+  a.nav-link {
+    color: black;
+    width: 80px;
+    text-decoration: none;
+    text-align: center;
   }
 
-  .navbar-item-active {
+  a.nav-link:hover {
+    color: black;
     text-decoration: underline;
+    text-decoration-color: variables.$red;
   }
+
+  a.nav-link.nav-active {
+    color: black;
+    text-decoration: underline;
+    text-decoration-color: variables.$red;
+  }
+
+  .nav-item.dropdown {
+    width: 80px;
+  }
+
   .navbar-brand {
     width: 50%;
     height: 20%;
