--- a/src/styles/partials/_carousel-slide.scss
+++ b/src/styles/partials/_carousel-slide.scss
@@ -17,6 +17,7 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 26px;
+    min-height: 67px;
   }
   .slide-text {
     height: 70px;
