added bootcamp page and cms

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,4 +17,4 @@ $theme-colors: (
 @import "partials/homepage", "partials/navbar", "partials/layout",
   "partials/getStartedButton", "partials/footer", "partials/about-page",
   "partials/carousel-slide", "partials/faq-page", "partials/basics-page",
-  "partials/start-coding", "partials/sidebar-section";
+  "partials/start-coding", "partials/sidebar-section", "partials/bootcamp-page";
