--- a/src/styles/partials/_basics-page.scss
+++ b/src/styles/partials/_basics-page.scss
@@ -290,15 +290,25 @@
           padding-bottom: 30px;
         }
       }
-      .basics-instructors-row {
+      .basics-instructors-row-desktop {
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        display: none;
+        @include variables.md {
+          display: block;
+        }
+      }
+      .basics-instructors-row-mobile {
+        @include variables.md {
+          display: none;
+        }
       }
       .basics-instructors-profile {
         @include variables.md {
           width: 25%;
         }
+
         .basics-instructors-name {
           font-family: variables.$secondary-font;
           font-style: normal;
@@ -622,7 +632,6 @@
 
         .accordion-button.collapsed {
           color: black;
-          font-family: variables.$secondary-font;
           font-style: normal;
           font-weight: 600;
           font-size: 18px;
@@ -631,7 +640,7 @@
         }
         .accordion-button:not(.collapsed) {
           color: black;
-          font-family: variables.$secondary-font;
+          background-color: variables.$light;
           font-style: normal;
           font-weight: 600;
           font-size: 18px;
