--- a/src/styles/partials/_application-form.scss
+++ b/src/styles/partials/_application-form.scss
@@ -43,4 +43,29 @@
     color: white;
     margin: 30px 0;
   }
+  .thanks-row {
+    background-color: white;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .thanks-message-cont {
+      background-color: $light;
+      min-height: 30vh;
+      margin: 40px;
+      border-radius: 20px;
+      padding: 48px;
+      width: 80%;
+      -webkit-box-shadow: 5px 5px 15px 5px #9b9b9b;
+      box-shadow: 5px 5px 15px 5px #9b9b9b;
+      @include media-breakpoint-up(md) {
+        max-width: 450px;
+      }
+
+      h1 {
+        color: $blue;
+      }
+    }
+  }
 }
