--- a/src/styles/partials/_bootcamp-page.scss
+++ b/src/styles/partials/_bootcamp-page.scss
@@ -378,6 +378,10 @@
         }
       }
       .basics-instructors-row-mobile {
+        .bootcamp-instructors-image-container {
+          display: flex;
+          justify-content: center;
+        }
         @include variables.md {
           display: none;
         }
@@ -386,18 +390,15 @@
           display: none;
         }
         .card {
-          min-height: 500px;
           border: none;
           .card-body {
+            min-height: 350px;
             padding: none;
+            text-align: center;
           }
         }
       }
       .basics-instructors-profile {
-        @include variables.md {
-          width: 25%;
-        }
-
         .basics-instructors-name {
           font-family: variables.$secondary-font;
           font-style: normal;
@@ -428,7 +429,7 @@
         font-weight: bold;
         font-size: 20px;
         line-height: 28px;
-        padding-top: 50px;
+        padding-top: 30px;
         padding-bottom: 30px;
         @include variables.md {
           font-size: 32px;
